# ConvertDigitalObjectToBalls

./: CMakeLists.txt  README.md
data/: chat.pgm  elephant.pgm  gymnaste.pgm  lettreZ.pgm  toyData.pgm
src/: CroppedVoronoiDiagram.h  CroppedVoronoiDiagram.ih  PowerMapZero.h  PowerMapZero.ih  convertDigitalUoB.cpp  convertDigitalUoB.cpp~  utils.ih
